--- a/kuutio/scss/useful-classes.scss
+++ b/kuutio/scss/useful-classes.scss
@@ -120,6 +120,7 @@
 .opacity-10,
 .opaque    { opacity: 1 !important;}
 .transparent { background: transparent !important }
+.opacity-manual { opacity: 0.8 !important;}
 
 // Crop
 .crop { margin: 0 !important;}
