--- a/records/style.css
+++ b/records/style.css
@@ -67,6 +67,8 @@ button[type="submit"]:hover {
     margin: 20px 0;
     background-color: #00000000;
     color: #ffffff;
+    display: flex;
+    align-items: center;
 }
 
 /* Style the result elements */
@@ -78,6 +80,12 @@ button[type="submit"]:hover {
     margin-bottom: 20px;
     background-color: #333333;
     color: #ffffff;
+}
+
+#results img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
 }
 
 #results h2 {
