--- a/records/style.css
+++ b/records/style.css
@@ -78,13 +78,14 @@ button[type="submit"]:hover {
     margin-bottom: 20px;
     background-color: #333333;
     color: #ffffff;
+    display: grid;
+    grid-template-columns: 1fr 3fr;  /* 1fr for image, 3fr for text */
+    grid-gap: 20px;
 }
 
 #results img {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-}
+    width: 100%;
+  }
 
 #results h2 {
     font-size: 18px;
