--- a/records/style.css
+++ b/records/style.css
@@ -109,7 +109,7 @@ button[type="submit"]:hover {
 }
 
 .record {
-    position: static;
+    position: sticky;
     top: 20%;
     width: 500px;
     height: 500px;
