--- a/records/style.css
+++ b/records/style.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
     background-color: #000000;
     color: #ffffff;
-    overflow: auto
+    overflow: visible
 }
 
 @media (max-width: 600px) {
@@ -108,8 +108,14 @@ button[type="submit"]:hover {
     margin-bottom: 10px;
 }
 
-.record {
-    position: fixed;
+.container {
+    position: relative;
+    height: 500px;
+    overflow: scroll;
+  }
+  
+  .record {
+    position: absolute;
     top: 20%;
     width: 500px;
     height: 500px;
@@ -117,20 +123,20 @@ button[type="submit"]:hover {
     background-image: url('record.png');
     background-size: cover;
     animation: spin 5s linear infinite;
-}
-
-@keyframes spin {
+  }
+  
+  @keyframes spin {
     100% {
-        transform: rotate(360deg);
+      transform: rotate(360deg);
     }
-}
-
-/* Add styles for left and right records */
-.record.left {
+  }
+  
+  /* Add styles for left and right records */
+  .record.left {
     left: 150px;
-}
-
-.record.right {
+  }
+  
+  .record.right {
     right: 150px;
-
-}
+  }
+  
