--- a/records/style.css
+++ b/records/style.css
@@ -109,10 +109,10 @@ button[type="submit"]:hover {
 }
 
 .record {
-    position: absolute;
-    top: 50%;
-    width: 300px;
-    height: 300px;
+    position: fixed;
+    top: 20%;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     background-image: url('record.png');
     background-size: cover;
