--- a/records/style.css
+++ b/records/style.css
@@ -72,6 +72,7 @@ button[type="submit"]:hover {
 
 /* Style the result elements */
 #results>div {
+    z-index: 1;    
     padding: 20px;
     border: 1px solid #cccccc;
     border-radius: 4px;
