--- a/records/style.css
+++ b/records/style.css
@@ -140,3 +140,19 @@ button[type="submit"]:hover {
         /* Hide the records */
     }
 }
+
+ul {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+  }
+  
+  li {
+    padding: 20px 60px;
+    border: 1px solid black;
+  }
