--- a/records/style.css
+++ b/records/style.css
@@ -167,5 +167,13 @@ p {
 }
 
 .song-list {
-    margin-top: -200px;
+    margin-top: -170px;
+}
+
+ul.song-list {
+    list-style-type: none;
+}
+
+ul#song-list {
+    list-style-type: none;
 }
