--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -14,7 +14,7 @@ body {
     grid-template-rows: 40% 60%;
     grid-template-areas:
       "records songs"
-      "prices songs";
+      "records songs";
     grid-gap: 0.6rem;
     grid-auto-rows: 1fr;
 }
