--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -13,7 +13,7 @@ body {
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-areas:
-      "records songs"
+      "records records"
       "prices songs"
       "prices songs";
     grid-gap: 0.6rem;
