--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -14,8 +14,8 @@ body {
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-areas:
-      "record-cover records"
-      "songs songs";
+      "record-cover records songs"
+      "record-cover records songs";
     grid-gap: 0.6rem;
     grid-auto-rows: 1fr;
 }
@@ -58,4 +58,21 @@ img{
 
 #back-button:hover {
     background-color: #1b1b1b;
+}
+
+@media (max-width: 600px) {
+    #record-info {
+        border: 1px solid #cccccc;
+        background-color: #333333;
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        display: grid;
+        grid-template-rows: 50% 50%;
+        grid-template-areas:
+          "record-cover records"
+          "record-cover songs";
+        grid-gap: 0.6rem;
+        grid-auto-rows: 1fr;
+    }
 }
