--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -70,8 +70,8 @@ img{
         display: grid;
         grid-template-rows: 50% 50%;
         grid-template-areas:
-          "record-cover records"
-          "songs songs";
+          "record-cover records records"
+          "songs songs songs";
         grid-gap: 0.6rem;
         grid-auto-rows: 1fr;
     }
