--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -12,7 +12,7 @@ body {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: grid;
-    grid-template-rows: 50% 50% 50%;
+    grid-template-rows: 50% 50%;
     grid-template-areas:
       "record-cover records songs"
       "record-cover songs songs";
