--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -14,8 +14,8 @@ body {
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-areas:
-      "record-cover records"
-      "record-cover songs";
+      "record-cover records songs"
+      "record-cover records songs";
     grid-gap: 0.6rem;
     grid-auto-rows: 1fr;
 }
@@ -62,6 +62,7 @@ img{
 
 @media (max-width: 600px) {
     #record-info {
+        grid-template-rows: none;
         border: 1px solid #cccccc;
         background-color: #333333;
         padding: 20px;
