--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -62,6 +62,7 @@ img{
 
 @media (max-width: 600px) {
     #record-info {
+        grid-template-rows: none;
         grid-template-areas: none;
         border: 1px solid #cccccc;
         background-color: #333333;
