--- a/records/morestyle.css
+++ b/records/morestyle.css
@@ -42,6 +42,12 @@ img{
     padding: 0;
 }
 
+#record-prices {
+    list-style-type: none;
+    font-size: 18px;
+    padding: 0;
+}
+
 #record-songs li {
     margin-bottom: 10px;
 }
