--- a/records/style.css
+++ b/records/style.css
@@ -4,7 +4,7 @@ body {
     overflow: auto
 }
 
-.container {    
+.container {
     padding-top: 5%;
     width: 40%;
     margin: 0 auto;
@@ -203,5 +203,24 @@ a {
 
 /* Darker background on mouse-over */
 .btn:hover {
+    background-color: rgb(36, 36, 36);
+}
+
+#pagination {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+#pagination button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(44, 44, 44);
+    color: white;
+    cursor: pointer;
+}
+
+#pagination button:hover {
     background-color: rgb(36, 36, 36);
 }
