--- a/css/mails.css
+++ b/css/mails.css
@@ -1,4 +1,7 @@
-.email-slider {
+.slider-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
   }
   
@@ -7,53 +10,49 @@
     top: 0;
     left: 0;
     width: 100%;
+    text-align: center;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    transition: all 0.5s ease;
   }
   
   .email-info.active {
     opacity: 1;
+    z-index: 1;
   }
   
-  .button-container {
+  .email-info.prev {
+    left: -100%;
+  }
+  
+  .email-info.next {
+    left: 100%;
+  }
+  
+  .email-info.active.prev {
+    left: 0;
+  }
+  
+  .email-info.active.next {
+    left: 0;
+  }
+  
+  .prev,
+  .next {
     position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .slider-button {
-    background-color: #333;
-    color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
     border: none;
-    border-radius: 50%;
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    margin: 0 10px;
+    background: none;
+    font-size: 24px;
     cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
+    color: #000;
   }
   
-  .slider-button:hover {
-    background-color: #666;
+  .prev {
+    left: 0;
   }
   
-  .slider-button i {
-    margin-left: 1px;
-  }
-  
-  .textarea-container {
-    width: 70%;
-    height: 150px;
-    max-width: 100%;
-    overflow: auto;
-    margin: auto;
-  }
-  
-  @media screen and (max-width: 480px) {
-    .textarea-container {
-      font-size: 12px;
-    }
+  .next {
+    right: 0;
   }
   
