--- a/records/2.0/style.css
+++ b/records/2.0/style.css
@@ -1,8 +1,17 @@
+html {
+    height  : 100%;
+    overflow: hidden;
+    position: relative;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     margin: 0;
     padding: 0;
+    height  : 100%;
+    overflow: auto;
+    position: relative
 }
 
 ::-webkit-scrollbar {
