--- a/records/2.0/style.css
+++ b/records/2.0/style.css
@@ -9,9 +9,11 @@ body {
     background-color: #ffffff;
     margin: 0;
     padding: 0;
-    height  : 100%;
-    overflow: auto;
-    position: relative
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 ::-webkit-scrollbar {
