--- a/records/style.css
+++ b/records/style.css
@@ -48,6 +48,8 @@ header {
     overflow-y: scroll;
     position: absolute;
     top: 200px;
+    right: 0;
+    left: 0;
     bottom: 0;
     padding: 20px;
 }
