--- a/records/style.css
+++ b/records/style.css
@@ -98,6 +98,7 @@ header {
     white-space: nowrap;
     overflow-x: scroll;
     margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     justify-content: flex-start;
     gap: 10px;
