--- a/projects/style.css
+++ b/projects/style.css
@@ -73,7 +73,7 @@ h1 {
 .project-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .project-content {
