--- a/projects/style.css
+++ b/projects/style.css
@@ -65,15 +65,10 @@ h1 {
 .project-image {
     width: 150px;
     height: 150px;
+    object-fit: cover;
     margin-right: 20px;
     border-radius: 10px;
     overflow: hidden;
-}
-
-.project-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
 }
 
 .project-content {
