--- a/projects/style.css
+++ b/projects/style.css
@@ -13,8 +13,6 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: var(--rt-color-dark);
     color: var(--rt-color-white);
 }
@@ -26,7 +24,6 @@ h1 {
 
 .project-list {
     list-style: none;
-    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,22 +39,12 @@ h1 {
     border-radius: 5px;
     background-color: var(--rt-color-dark);
     width: 700px;
-    transition: background-color 0.3s, filter 0.3s;
 }
 
 @media (max-width: 800px) {
     .project {
-        display: flex;
-        align-items: flex-start;
-        margin: 10px 0;
-        padding: 10px;
-        border: 1px solid var(--rt-color-dark);
-        border-radius: 5px;
-        background-color: var(--rt-color-dark);
-        width: 700px;
-        transition: background-color 0.3s, filter 0.3s;
         flex-direction: column;
-        max-width: 70%;
+        width: 70%;
     }
 
 
