--- a/projects/style.css
+++ b/projects/style.css
@@ -46,14 +46,16 @@ h1 {
 
 @media (max-width: 768px) {
     .project {
-        flex-direction: column;
+        display: flex;
+        flex-direction: column; /* Stack children vertically */
+        align-items: flex-start;
+        margin: 10px 0;
+        padding: 10px;
+        border: 1px solid var(--rt-color-dark);
+        border-radius: 5px;
+        background-color: var(--rt-color-dark);
         width: 70%;
     }
-
-    .project-footer {
-        width: 85%;
-    }
-
 }
 
 .project:hover {
@@ -71,7 +73,6 @@ h1 {
 
 .project-content {
     min-height: 150px;
-    max-height: 500px;
     align-self: flex-start;
     flex: 1;
 }
@@ -100,7 +101,6 @@ h1 {
     align-items: center;
     padding: 0;
     margin: 0;
-    overflow: hidden;
     list-style: none;
 }
 
