--- a/projects/open.css
+++ b/projects/open.css
@@ -176,3 +176,12 @@ header {
         /* Adjust padding */
     }
 }
+
+footer {
+    color: var(--rt-color-white-sec);
+    margin: 20px;
+}
+
+footer a {
+    color: var(--rt-color-white-sec);
+}
